# inepta

./: README.md  pyproject.toml
inepta/: __main__.py  __main__.pyi
tests/: test_inepta.py
