[tool.poetry]
name = "inepta"
version = "0.1.0"
description = "Web scraping within PolyAnalyst made easy"
authors = ["yatmanov <yatmanov@megaputer.ru>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
